# openhd_x21b_base

./: .gitignore  .gitmodules  Copyright_Statement.md
app/lvgl_demo/rk_demo/furniture_control/: player_ui.c
app/rkadk/examples/: CMakeLists.txt  rkadk_aov_record_test.c  rkadk_disp_test.c  rkadk_muxer_test.c  rkadk_player_test.c  rkadk_record_test.c  rkadk_setting_test.c
app/rkadk/include/: rkadk_aov.h  rkadk_common.h  rkadk_disp.h  rkadk_media_comm.h  rkadk_muxer.h  rkadk_param.h  rkadk_param_map.h  rkadk_platform_param.h  rkadk_player.h  rkadk_record.h  rkadk_struct2ini.h
app/rkadk/inicfg/rk3576/: rkadk_defsetting_sensor_0.ini  rkadk_defsetting_sensor_1.ini
app/rkadk/inicfg/rv1106_1103/: rkadk_defsetting_sensor_1.ini  rkadk_setting_sensor_0.ini
app/rkadk/inicfg/rv1126_1109/: rkadk_defsetting_sensor_1.ini  rkadk_setting_sensor_0.ini
app/rkadk/src/: SConscript
app/rkadk/src/aov/: rkadk_aov.c
app/rkadk/src/common/: rkadk_media_comm.c  rkadk_thumb_comm.c
app/rkadk/src/display/: rkadk_disp.c
app/rkadk/src/muxer/: rkadk_muxer.c
app/rkadk/src/param/: rkadk_param.c  rkadk_param_map.c  rkadk_struct2ini.c
app/rkadk/src/photo/: rkadk_photo.c
app/rkadk/src/player/: rkadk_player.c
app/rkadk/src/record/: rkadk_record.c
app/rkadk/src/stream/: rkadk_stream.c
app/rkadk/src/ui/: rkadk_ui.c
app/rkai/: 1.patch  CMakeLists.txt  LICENSE
app/rkai/app_conf/config/: json_parse.py  rkai_cfg.ini
app/rkai/app_conf/inputs/: image_1024x1204.npy  image_392x392.npy  make_npy_data.py
app/rkai/common/include/: easy_timer.h  rkai_common.h  rkai_ini.h
app/rkai/common/src/: cnpy.cpp  rkai_ini.cpp
app/rkai/doc/: Rockchip_Developer_Guide_Linux_RKAI_CN.md  Rockchip_Developer_Guide_Linux_RKAI_EN.md
app/rkai/rkai_LLM/: CMakeLists.txt
app/rkai/rkai_LLM/include/: rkai_llm.h
app/rkai/rkai_LLM/src/: rkai_llm.cpp
app/rkai/rkai_VLM/: CMakeLists.txt
app/rkai/rkai_VLM/include/: rkai_vlm_llm.h  rkai_vlm_vision.h
app/rkai/rkai_VLM/src/: rkai_vlm_llm.cpp  rkai_vlm_vision.cpp
app/rkai/samples/: rkai_samples_llm.cpp  rkai_samples_vlm.cpp  rkai_samples_vlm_vision.cpp
app/rkipc/: CMakeLists.txt
app/rkipc/cmake/: Version.cmake
app/rkipc/common/: log.h
app/rkipc/common/audio/: audio.c
app/rkipc/common/network/: Rk_wifi.c  network.c
app/rkipc/common/osd/: osd.c
app/rkipc/common/param/: param.c
app/rkipc/common/player/: player.c  player.h
app/rkipc/common/rtsp/: rtsp.c
app/rkipc/common/socket_server/: server.c
app/rkipc/common/storage/: storage.c
app/rkipc/common/uvc/: uvc_control.c
app/rkipc/common/venc/: venc.c
app/rkipc/docs/: Rockchip_Developer_Guide_Linux_RKIPC_CN.md  Rockchip_Developer_Guide_Linux_RKIPC_EN.md
app/rkipc/src/rk3588_multi_ipc/: CMakeLists.txt  RkLunch.sh  main.c  rkipc-4x.ini  rkipc-6x.ini  rkipc-8x.ini
app/rkipc/src/rv1126b_dual_ipc/: CMakeLists.txt  RkLunch.sh  main.c  rkipc-dual-600w.ini
app/rkipc/src/rv1126b_dv/: CMakeLists.txt  RkLunch.sh  main.c  rkipc-gc8613.ini  rkipc-imx586.ini  rkipc.ini
app/rkipc/src/rv1126b_ipc/: CMakeLists.txt  RkLunch-buildroot.sh  main.c  rkipc-1920x1080-buildroot.ini  rkipc-2688x1520-buildroot.ini  rkipc-2688x1520.ini  rkipc-3200x1800-buildroot.ini  (+3 more)
debian/: mk-rootfs-bookworm.sh
device/rockchip/common/: README.md
docs/: readme_cn.md  readme_en.md
docs/Patches/Real-Time-Performance/: Rockchip_Develop_Guide_Linux_RealTime_CN.md
ohd-misc/: start-ohd.sh
ubuntu/: mk-rootfs.sh  readme.md
ubuntu/overlay-debug/: readme.md
ubuntu/overlay-firmware/firmware/: readme.md
ubuntu/overlay/etc/: readme.md
x21b-swu/: build_swu.sh
x21b-swu/config/: sw-description  sw-description-base  sw-description-full  sw-description-ohd
(+146 files in other folders)
